Fixed the unmounting of multiple shares: After each unmount Smb4K waits for 50 ms before starting the next unmount. All tests up to now showed no busy error anymore even when unmounting more than 10 shares at once. Implemented inhibition of sleep and shutdown during unmount. The inhibition delays the shutdown/sleep untill all shares are unmounted. Also, simplified notification after mounting and unmounting. This has the consequence that every mount is reported at the moment.

BUG: 417631